<resources>
    <string name="terms" translatable="false">terms_of_service</string>
    <string name="privacy" translatable="false">privacy_policy</string>
    <string name="member" translatable="false">member</string>
    <string name="send_report">문의사항 보내기</string>
    <string name="api_google_server">https://oauth2.googleapis.com</string>
    <string name="sign_up_terms_1">회원가입을 누르시면</string>
    <string name="sign_up_terms_2">일반 이용 약관</string>
    <string name="sign_up_terms_3">에 동의하시게 됩니다.</string>
    <string name="popup_hide_message">당분간 보지 않기</string>
    <string name="popup_close_message">닫기</string>
    <string name="error_title_no_network">네트워크 오류</string>
    <string name="error_no_network">네트워크가 불안정합니다. 잠시 후 다시 시도해주세요</string>
    <string name="error_no_timetable_title">시간표 이름이 주어지지 않았습니다</string>
    <string name="error_logout_fail">로그아웃에 실패하였습니다</string>
    <string name="error_invalid_id">아이디는 영문 혹은 숫자로 구성된 4~32자여야 합니다</string>
    <string name="error_invalid_password">비밀번호는 영문과 숫자 모두를 포함하는 6~20자여야 합니다</string>
    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
    <string name="sign_up_app_bar_title">회원가입</string>
    <string name="sign_up_id_title">아이디</string>
    <string name="sign_up_id_hint">영문, 숫자로 구성된 4~32자 이내</string>
    <string name="sign_up_password_title">비밀번호</string>
    <string name="sign_up_password_hint">영문, 숫자 모두 포함 6~20자 이내</string>
    <string name="sign_up_password_confirm_title">비밀번호 확인</string>
    <string name="sign_up_password_confirm_hint">비밀번호를 한 번 더 입력하세요</string>
    <string name="sign_up_email_input_title">이메일</string>
    <string name="sign_up_email_input_hint">이메일 주소를 입력하세요</string>
    <string name="sign_up_email_form">\@snu.ac.kr</string>
    <string name="sign_up_sign_up_button">계정 만들기</string>
    <string name="sign_up_sign_up_facebook_button">페이스북으로 시작하기</string>
    <string name="sign_in_app_bar_title">로그인</string>
    <string name="sign_in_logo_title">SNUTT</string>
    <string name="sign_in_sign_in_button">로그인</string>
    <string name="continue_with_sns_account">SNS 계정으로 계속하기</string>
    <string name="sign_in_sign_in_facebook_button">페이스북으로 시작하기</string>
    <string name="sign_in_sign_in_google_button">구글 계정으로 시작하기</string>
    <string name="sign_in_sign_in_google_cancelled">구글 로그인이 취소되었습니다.</string>
    <string name="sign_in_sign_in_google_failed_unknown">구글 로그인에 실패했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="social_link_title">SNS 계정 연동 및 해제</string>
    <string name="social_link_account_already_using">이미 사용 중인 이메일입니다.\n%s 계정으로 시도해 보세요.</string>
    <string name="social_link_kakao">카카오 계정 연동</string>
    <string name="social_link_google">구글 계정 연동</string>
    <string name="social_link_facebook">페이스북 계정 연동</string>
    <string name="social_unlink_kakao">카카오 계정 연동 해제</string>
    <string name="social_unlink_google">구글 계정 연동 해제</string>
    <string name="social_unlink_facebook">페이스북 계정 연동 해제</string>
    <string name="sign_in_kakao_failed_cancelled">카카오 로그인이 취소되었습니다.</string>
    <string name="sign_in_kakao_failed_unknown">카카오 로그인에 실패했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="sign_in_facebook_failed_cancelled">페이스북 로그인이 취소되었습니다.</string>
    <string name="sign_in_facebook_failed_unknown">페이스북 로그인에 실패했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="settings_licenses_title">오픈소스 라이선스</string>
    <string name="license_colorpicker_route">colorpicker</string>
    <string name="license_colorpicker_title">Color Picker</string>
    <string name="license_colorpicker_name">Apache License</string>
    <string name="license_colorpicker_content">Copyright 2014-2017 QuadFlask

    \n\nLicensed under the Apache License, Version 2.0 (the "License");
    \nyou may not use this file except in compliance with the License.
    \nYou may obtain a copy of the License at

    \n\nhttp://www.apache.org/licenses/LICENSE-2.0

    \n\nUnless required by applicable law or agreed to in writing, software
    \ndistributed under the License is distributed on an "AS IS" BASIS,
    \nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    \nSee the License for the specific language governing permissions and
    \nlimitations under the License.</string>
    <string name="license_guava_route">guava</string>
    <string name="license_guava_title">Guava</string>
    <string name="license_guava_name">Apache License</string>
    <string name="license_guava_content">Licensed under the Apache License, Version 2.0 (the "License");
    \nyou may not use this file except in compliance with the License.
    \nYou may obtain a copy of the License at

    \n\nhttp://www.apache.org/licenses/LICENSE-2.0

    \n\nUnless required by applicable law or agreed to in writing, software
    \ndistributed under the License is distributed on an "AS IS" BASIS,
    \nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    \nSee the License for the specific language governing permissions and
    \nlimitations under the License.</string>
    <string name="license_retrofit_route">retrofit</string>
    <string name="license_retrofit_title">Retrofit</string>
    <string name="license_retrofit_name">Apache License</string>
    <string name="license_retrofit_content">Copyright 2013 Square, Inc.

    \n\nLicensed under the Apache License, Version 2.0 (the "License");
    \nyou may not use this file except in compliance with the License.
    \nYou may obtain a copy of the License at

    \n\nhttp://www.apache.org/licenses/LICENSE-2.0

    \n\nUnless required by applicable law or agreed to in writing, software
    \ndistributed under the License is distributed on an "AS IS" BASIS,
    \nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    \nSee the License for the specific language governing permissions and
    \nlimitations under the License.</string>
    <string name="license_okhttp_route">okhttp</string>
    <string name="license_okhttp_title">Okhttp</string>
    <string name="license_okhttp_name">Apache License</string>
    <string name="license_okhttp_content">Copyright 2019 Square, Inc.

    \n\nLicensed under the Apache License, Version 2.0 (the "License");
    \nyou may not use this file except in compliance with the License.
    \nYou may obtain a copy of the License at

    \n\nhttp://www.apache.org/licenses/LICENSE-2.0

    \n\nUnless required by applicable law or agreed to in writing, software
    \ndistributed under the License is distributed on an "AS IS" BASIS,
    \nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    \nSee the License for the specific language governing permissions and
    \nlimitations under the License.</string>
    <string name="license_pretendard_route">pretendard</string>
    <string name="license_pretendard_title">Pretendard</string>
    <string name="license_pretendard_name">SIL OPEN FONT LICENSE</string>
    <string name="timetable_app_bar_title">나의 시간표</string>
    <string name="notifications_placeholder_description">넣은 강좌의 수강편람이 바뀌거나, 새로운 수강편람이 뜨면 알림을 줍니다</string>
    <string name="notifications_placeholder_title">알림이 없습니다</string>
    <string name="common_network_failure">네트워크 연결 상태를 확인해주세요.</string>
    <string name="lecture_detail_app_bar_title">강의 상세 보기</string>
    <string name="lecture_detail_top_bar_complete">완료</string>
    <string name="lecture_detail_top_bar_edit">편집</string>
</resources>