<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:elevation="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:translationZ="1dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/Typo.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lecture_detail_app_bar_title" />

        <TextView
            android:id="@+id/complete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:padding="8dp"
            android:text="@string/lecture_detail_top_bar_complete"
            android:visibility="gone" />

        <TextView
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:padding="8dp"
            android:text="@string/lecture_detail_top_bar_edit"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lecture_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray" />

</LinearLayout>